# JDCrawler

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  docker-compose.yml  pyproject.toml  run_backend.sh
.sisyphus/plans/: jdcrawler.md
backend/: Dockerfile  README.md  check_data.py  entrypoint.sh  pyproject.toml  pyrightconfig.json
backend/jdcrawler/: __main__.py  main.py  scheduler.py
backend/jdcrawler/api/: analysis.py  crawl.py  jobs.py  keywords.py  notifications.py  profile.py
backend/jdcrawler/crawlers/: base.py  jobkorea.py  saramin.py  wanted.py
backend/jdcrawler/db/: client.py  schema.py
backend/jdcrawler/models/: job.py  keyword.py  profile.py
backend/jdcrawler/services/: analysis.py  crawler.py
backend/jdcrawler/utils/: rate_limiter.py  retry.py
backend/tests/: conftest.py  test_analysis.py  test_api.py  test_crawl_api.py  test_crawler_utils.py  test_db.py  test_e2e.py  test_fuzzy_matching.py  test_jobkorea.py  test_jobs_api.py  test_keywords_api.py  test_models.py  test_saramin.py  test_wanted.py
docs/puml/: container.puml  context.puml  erd.puml  sequence.puml
frontend/: Dockerfile  README.md  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  simple.test.ts
frontend/src/components/: CrawlTrigger.tsx
frontend/src/components/jobs/: JobDetail.tsx
frontend/src/components/layout/: Header.test.tsx  (+3 more)
frontend/src/pages/: Dashboard.tsx  Jobs.tsx  Keywords.tsx  Profile.tsx
frontend/src/queries/: useJobStats.ts  useNewJobsCount.ts
frontend/src/types/: index.ts
(+1 files in other folders)
