[project]
name = "jdcrawler-monorepo"
version = "0.1.0"
description = "Korean job posting crawler and dashboard"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
